sealos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: document-flow
  labels:
    name: document-flow
